# avex

./: .dict-allowed.txt  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  benchmark  generate_enhanced_aggregate_table.py  generate_unaggregated_tables.py  get_label_map_beats_sl.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  results.xlsx  setup.py  sl_beats_animalspeak_label_map.json  visualize_excel.py
.cursor/rules/: standard.mdc
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml  publish-dry-run.yml  publish-test.yml  publish.yml  pythonapp.yml
.torch-fingerprint-probes/: 2.10.0.json  2.6.0.json  2.7.1.json  2.8.0.json  2.9.1.json  summary.json
avex/: __init__.py  cli.py  configs.py  run_evaluate.py  run_train.py
avex/api/: list_models.py
avex/data/: __init__.py  animalspeak_column_patch.py  audio_utils.py  augmentations.py  birdset_train_splits.py  cloudpathlib_retry_patch.py  configs.py  data_utils.py  dataset.py  ebird_taxonomy.json  ebird_taxonomy.py  ebird_taxonomy_v2021.json  ebird_taxonomy_v2025.json  text_label_from_features.py  transforms.py
avex/evaluation/: embedding_manager.py  embedding_utils.py  finetune.py  retrieval.py
avex/io/: __init__.py  filesystem.py  paths.py
avex/metrics/: beans_metrics.py  metric_factory.py
avex/models/: audioprotopnet.py  audioprotopnet_sed.py  aves_model.py  base_model.py  beats_model.py  birdmae.py  birdnet.py  clip.py  convnext.py  eat_hf.py  efficientnet.py  get_model.py  perch.py  perch2.py  resnet.py  surfperch.py
avex/training/: checkpoint_manager.py  clustering_evaluator.py  distributed.py  losses.py  metrics_tracker.py  optimisers.py  prototypical_utils.py  train.py  trainer_factory.py  training_strategies.py  training_utils.py
avex/utils/: __init__.py  experiment_logger.py  experiment_tracking.py  safetensors_validation.py  utils.py
configs/data_configs/: beans.yml  beans_classification_gs.yml  (+39 more)
docs/: .buildinfo  .buildinfo.bak  api_architecture.html  api_architecture.md  api_probes.html  api_probes.md  api_reference.html  api_reference.md  avex_model_patterns.md  configuration.html  configuration.md  custom_model_registration.html  custom_model_registration.md  embedding_extraction.html  embedding_extraction.md  examples.html  examples.md  genindex.html  index.html  index.md  model_selector.html  objects.inv  probe_system.html  probe_system.md  search.html  searchindex.js  supported_models.html  supported_models.md  training_evaluation.html  training_evaluation.md
docs-src/: api_probes.md  api_reference.md  conf.py  index.md  supported_models.md  training_evaluation.md
esp_data_temp/: __init__.py  config.py  dataset.py  transformations.py
examples/: 00_quick_start.py  01_basic_model_loading.py  02_checkpoint_loading.py  03_custom_model_registration.py  04_model_registry_management.py  04_training_and_evaluation.py  05_embedding_extraction.py  05_training_and_evaluation.py  06_advanced_usage.py  06_classifier_head_loading.py  06_embedding_extraction.py  07_classifier_head_loading.py  07_probe_training_and_inference.py  08_embedding_extraction.py  08_probe_comparison.py  08_probe_training.py  09_multiband_model.py  09_sed_custom_encoder.py  audioprotopnet_species_detection.py  colab_sl_beats_demo.ipynb
jobs/: beats_base.sh  clap_animalspeak_4xa100.sh  clap_animalspeak_h100.sh  clap_base.sh  clap_chain_animalspeak_audiosetcaps_h100.sh  clap_chain_synthetic_xc_inat_h100.sh  clap_chain_xc_inat_t1_t3_audiosetcaps_h100.sh  clip_48khz_single.sh  clip_base.sh  clip_base_robust.sh  clip_base_single.sh  cpu_eval.sh  detector_classifier.sh  eat.sh  eat_base.sh  efficient_base.sh  efficient_cpu.sh  efficientnet_48khz.sh  efficientnet_base.sh  efficientnet_small.sh  eval.sh  eval_48khz.sh  eval_array.sh  eval_array_beans.sh  eval_array_beans_icassp.sh  eval_array_birdmae.sh  eval_array_birdset.sh  eval_array_birdset_icassp.sh  eval_array_id_icassp.sh  eval_audioprotopnet_beans.sh  eval_audioprotopnet_sed_beans.sh  eval_audioprotopnet_sed_beans_detection.sh  eval_audioprotopnet_sed_beans_detection_remaining.sh  eval_audioprotopnet_sed_beans_remaining.sh  eval_audioprotopnet_sed_birdset.sh  eval_aves.sh  eval_beats_all_slurm.sh  eval_biolingual_beans_pro_h100.sh  eval_birdset.sh  eval_clap_beans_pro_h100.sh  (+24 more)
latex/: ssl_models_analysis.tex  ssl_models_analysis_noesc50.tex
latex_arxiv/: aggregate_v0.tex  aggregate_v0_highlighted.tex  aggregate_v0_noesc50.tex  birdset_zeroshot_comparison.md  birdset_zeroshot_comparison.tex  efficientnet_analysis.tex  efficientnet_analysis_noesc50.tex  unaggregated_aggregate.tex  unaggregated_beans.tex  unaggregated_beans_classification.tex  unaggregated_beans_detection.tex  unaggregated_birdset.tex  unaggregated_complex_tasks.tex
my_dummy_library/: linear.py  nnet.py
representation_learning/: __init__.py  cli.py  configs.py  run_evaluate.py  run_train.py  utils.py
scripts/: add_probe_experiments.py  bats.py  cbi.py  check_weight_movement.py  compare_sl_beats_against_representation_learning.py  convert_to_safetensors.py  create_simple_jsonls.py  dcase.py  demo_leaderboard.py  dogs.py  enabirds.py  esc50.py  eval_biolingual_beans_pro.py  eval_clap_beans_pro.py  eval_clap_cbi.py  experiment_leaderboard.py  hainan_gibbons.py  humbugdb.py  inference_pseudovox.py  inference_pseudovox_beats_sl.py  inference_pseudovox_v1.py  inference_silentcities.py  profile_data_loading.py  record_evaluate_end_to_end_metrics.py  regenerate_official_model_output_fingerprints.py  rename_gcs_models.py  resample_folder_16khz.py  rfcx.py  speech_commands.py  test_clap_cbi_mini.py  test_config_parsing.py  test_evaluation_pipeline.py  upload_esp_aves2_models_to_hf.py  upload_model_cards_markdown_to_gcs.py  validate_data.py  validate_datasets.py  watkins.py
sweeps/: dummy_sweep.yml
tests/: conftest.py  manual_test_data_root_fallback.sh  test_all_models_fix.py  test_all_models_regression.py  test_beats_32khz.py  test_beats_fix.py  test_detection_metrics.py
utils/: __init__.py  probing.py  visualization.py
(+735 files in other folders)
