# TODO (OSS): change [project]`, `[dependency-groups]`,
# `[project.urls]`, and `[tool.hatch.build.targets.wheel]
# According to your needs.

[project]
name = "representation-learning"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "cloudpathlib>=0.21.0",
  "google-cloud-storage>=3.1.0",
  "gradio>=4.0.0",
  "gradio-leaderboard>=0.0.13",
  "joblib>=1.4.2",
  "librosa>=0.11.0",
  "mlflow>=2.22.0",
  "numpy==1.26.4",
  "omegaconf>=2.3.0",
  "pandas>=2.2.3",
  "psutil>=7.0.0",
  "pydantic>=2.11.3",
  "pysoundfile>=0.9.0.post1",
  "pyyaml>=6.0.2",
  "resampy>=0.4.3",
  "soundfile>=0.13.1",
  "timm>=1.0.15",
  "torch==2.5.0",
  "torchaudio>=2.2.0",
  "torchvision>=0.17.0",
  "tqdm>=4.67.1",
  "transformers>=4.51",
  "h5py>=3.13.0",
  "semver>=3.0.4",
  "esp-data>=1.1.1",
  "tensorflow==2.17.0",
  "pytorch-lightning>=2.5.1.post0",
  "tensorflow-hub>=0.16.1",
  "einops>=0.8.1",
]

[dependency-groups]
gpu = ["bitsandbytes>=0.45.5; sys_platform != 'darwin'"]
dev = [
  "pre-commit<=4.2.0",
  "pytest<=7.4.0",
  "ruff<=0.11.2",
  "click<=8.1.7",
  "isort<=5.13.2",
  "pytest<=7.4.0",
  "yamllint<=1.35.1",
  "ipykernel>=6.29.5",
]

# esp_data package
[[tool.uv.index]]
name = "esp-pypi"
url = "https://oauth2accesstoken@us-central1-python.pkg.dev/okapi-274503/esp-pypi/simple/"
explicit = true

[tool.uv.sources]
esp-data = { index = "esp-pypi" }
transformers = { git = "https://github.com/huggingface/transformers" }

[tool.uv]
default-groups = ["dev", "gpu"]
keyring-provider = "subprocess"

[project.urls]
Homepage = "https://github.com/earthspecies/representation-learning"
Repository = "https://github.com/earthspecies/representation-learning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["representation_learning", "esp_data"]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "check_*.py",
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    "fix_paths.py",
    "representation_learning/models/eat.py",
]

[tool.ruff.lint]
# List of plugins and Rules
# Pycodestyle all errors and warning, Pydoclint, Pyflakes, bugbear, annotations
select = ["E4", "E7", "E9", "F", "I"] # Default rules
extend-select = ["DOC", "B9", "B", "E", "W", "ANN"]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.codespell]
skip = "*.csv"
