[project]
name = "representation-learning"
version = "0.4.1"
description = "A comprehensive Python-based system for training, evaluating, and analyzing audio representation learning models with support for both supervised and self-supervised learning paradigms"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Earth Species", email = "contact@earthspecies.org"},
]
keywords = ["audio", "machine-learning", "representation-learning", "self-supervised", "bioacoustics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
  "librosa>=0.11.0",
  "numpy>=1.26.4",
  "omegaconf>=2.3.0",
  "pydantic>=2.11.3",
  "pyyaml>=6.0.2",
  "soundfile>=0.13.1",
  "birdnetlib>=0.18.0",
  "timm>=1.0.15",
  "torch>=2.5.0",
  "torchaudio>=2.2.0",
  "torchvision>=0.17.0",
  "tqdm>=4.67.1",
  "huggingface-hub>=0.36.0",
  "transformers>=4.0.0",
  "h5py>=3.13.0",
  "tensorflow>=2.17.0",
  "tensorflow-hub>=0.16.1",
  "einops>=0.8.1",
  "pydantic-settings>=2.9.1",
  "fsspec>=2024.2.0",
  "gcsfs>=2024.2.0",
  "s3fs>=2024.2.0",
  "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
  "pytorch-lightning>=2.5.1.post0",
  "mlflow>=2.22.0",
  "wandb>=0.21.0",
  "esp-sweep>=0.1.0",
  "esp-data>=1.5.0",
  "gradio>=4.0.0",
  "gradio-leaderboard>=0.0.13",
]

[dependency-groups]
gpu = ["bitsandbytes>=0.45.5; sys_platform != 'darwin'"]
dev = [
  "pre-commit<=4.2.0",
  "pytest<=7.4.0",
  "ruff<=0.11.2",
  "click<=8.1.7",
  "isort<=5.13.2",
  "yamllint<=1.35.1",
  "ipykernel>=6.29.5",
]
project-dev = [
  "pytorch-lightning>=2.5.1.post0",
  "mlflow>=2.22.0",
  "wandb>=0.21.0",
  "esp-sweep>=0.1.0",
  "esp-data>=1.5.0",
  "gradio>=4.0.0",
  "gradio-leaderboard>=0.0.13",
]

[project.scripts]
repr-learn = "representation_learning.cli:cli"
list-models = "representation_learning.api.list_models:main"

[[tool.uv.index]]
name = "esp-pypi"
url = "https://oauth2accesstoken@us-central1-python.pkg.dev/okapi-274503/esp-pypi/simple/"
publish-url = "https://oauth2accesstoken@us-central1-python.pkg.dev/okapi-274503/esp-pypi/"
explicit = true

[tool.uv.sources]
esp-data = { index = "esp-pypi" }
esp-sweep = { index = "esp-pypi" }

[tool.uv]
default-groups = ["dev", "gpu"]
keyring-provider = "subprocess"

[project.urls]
Homepage = "https://github.com/earthspecies/representation-learning"
Repository = "https://github.com/earthspecies/representation-learning"
Documentation = "https://github.com/earthspecies/representation-learning#readme"
"Bug Tracker" = "https://github.com/earthspecies/representation-learning/issues"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "representation_learning"
module-root = ""

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "check_*.py",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# List of plugins and Rules
# Pycodestyle all errors and warning, Pydoclint, Pyflakes, bugbear, annotations
select = ["E4", "E7", "E9", "F", "I"] # Default rules
extend-select = ["DOC", "B9", "B", "E", "W", "ANN"]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.codespell]
skip = "*.csv"
